# pitchApp

./: README.md  build.gradle  local.properties  sensor_data.csv  settings.gradle  settings.gradle.kts
app/: build.gradle  build.gradle.kts  lint-baseline.xml
app/scr/main/cpp/: MainActivity.kt  PitchSlopeResult.kt  activity_main.xml  main.cpp  native-lib.cpp  simulation.cpp  simulation.h
app/scr/main/java/com/example/pitchApp_v2/: MainActivity.kt
app/scr/main/res/layout/: activity_main.xml
app/src/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  filterroad.cpp  kalmanfilter.cpp  kalmanfilter.h  native-lib.cpp  simulation.cpp  simulation.h
app/src/main/java/com/example/pitchApp_v2/: MainActivity.kt  PitchSlopeResult.kt  SensorManagerHelper.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
